Start Over Using Tutorial

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
      </nav>
 
      <div class="main-content">
-
+          <h1>Tic-Tac-Toe</h1>
+        
+          </div>
      </div>
 
  <div class="footer-container-fluid">
