Changed game setup and logic.  Added functionality.  Need to finishe up styling as well as clean up code.

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
   
           <ul class="nav-list" id="navi-list">
                <li class="list-item">
-                    <a href="#about-me">About Us</a>
+                    <a href="#about-me" hidden>About Us</a>
                </li>
                <li class="list-item">
-                    <a href="#contact">Contact</a>
+                    <a href="#contact" hidden>Contact</a>
                </li>
                <li class="list-item">
-                    <a href="#contact">Support</a>
+                    <a href="#contact" hidden>Support</a>
                </li>
           </ul>
           <!-- <div class="menu" id="toggle-menu" onclick="toggleMenu()"> -->
@@ -53,8 +53,7 @@
 
      <div class="main-content">
           <h1>Tic-Tac-Toe</h1>
-        
-          </div>
+        <div id="ttt-game"></div>
      </div>
 
  <div class="footer-container-fluid">
@@ -68,6 +67,6 @@
             </div>
         </div>
         
-<script src="dist/build.js" defer></script>
+<!-- <script src="dist/build.js" defer></script> -->
 </body>
 </html>
