--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 
      <div class="main-content">
           <h1>Tic-Tac-Toe</h1>
-        <div id="ttt-game"></div>
+          <h3 id="results"></h3>
+        <div id="tic_tac_toe_game"></div>
      </div>
 
  <div class="footer-container-fluid">
